<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#31303e">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >
        <ImageView
            android:id='@+id/activity_login_iv'
            android:layout_width="@dimen/w120"
            android:layout_height="@dimen/h100"
            android:layout_centerVertical="true"
            android:layout_centerInParent="true"
            android:background="@mipmap/activity_main_img"
            ></ImageView>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.2"
        android:orientation="vertical"
        android:paddingLeft="@dimen/w18"
        android:paddingRight="@dimen/w18"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="@dimen/w40"
                android:layout_height="@dimen/h33"
                android:src="@mipmap/icon_login_user"
                android:background="@drawable/iv_radius"
                ></ImageView>
            <EditText
                android:id="@+id/activity_login_et_phone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/h33"
                android:hint="@string/phone_number"
                android:textSize="@dimen/h11"
                android:paddingLeft="@dimen/w10"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:maxLength="32"
                android:background="@drawable/et_focus_state"
                ></EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/h15"
            >
            <ImageView
                android:layout_width="@dimen/w40"
                android:layout_height="@dimen/h33"
                android:src="@mipmap/icon_login_pwd"
                android:background="@drawable/iv_radius"
                ></ImageView>
            <EditText
                android:id="@+id/activity_login_et_pwd"
                android:layout_width="match_parent"
                android:layout_height="@dimen/h33"
                android:hint="@string/password"
                android:textSize="@dimen/h11"
                android:paddingLeft="@dimen/w10"
                android:inputType="textPassword"
                android:maxLines="1"
                android:maxLength="20"
                android:background="@drawable/et_focus_state"
                ></EditText>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:id="@+id/activity_login_tv_forgotPwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_pwd"
                android:textColor="#4889c9"
                android:textSize="@dimen/h10"
                android:layout_marginTop="@dimen/h15"
                android:layout_marginBottom="@dimen/h15"
                android:layout_alignParentRight="true"
                ></TextView>
        </RelativeLayout>

        <Button
            android:id="@+id/activity_login_btn_signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textSize="@dimen/h13"
            android:textColor="#fff"
            android:background="@drawable/btn_press_state"
            ></Button>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/h40"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_account"
                    android:textSize="@dimen/h15"
                    android:textColor="#fff"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    ></TextView>

                <TextView
                    android:id="@+id/activity_login_tv_signUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:text="@string/sign_up"
                    android:textColor="#4889c9"
                    android:textSize="@dimen/h11"></TextView>
            </LinearLayout>

        </RelativeLayout>


    </LinearLayout>

</LinearLayout>