<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/h10"
        android:layout_marginLeft="@dimen/w10"
        android:layout_marginRight="@dimen/w15">
        <ImageView
            android:id="@+id/activity_reset_password_iv"
            android:layout_width="@dimen/w25"
            android:layout_height="@dimen/h18"
            android:layout_centerVertical="true"
            android:background="@mipmap/icon_back"></ImageView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_account"
            android:textStyle="bold"
            android:textSize="@dimen/h18"
            android:layout_centerInParent="true"></TextView>

    </RelativeLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/activity_reset_password_et1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_security_phone_num"
                android:textSize="@dimen/h12"
                android:paddingTop="@dimen/h6"
                android:paddingBottom="@dimen/h6"
                android:paddingLeft="@dimen/w10"
                android:layout_marginLeft="@dimen/w20"
                android:layout_marginRight="@dimen/w20"
                android:layout_marginTop="@dimen/h15"
                android:inputType="phone"
                android:background="@drawable/et_focus_state_contact"></EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset_account_text"
                android:textColor="@color/colorGray"
                android:textSize="@dimen/h13"
                android:layout_marginTop="@dimen/h5"
                android:layout_marginBottom="@dimen/h5"
                android:layout_marginLeft="@dimen/w20"
                android:layout_marginRight="@dimen/w20"></TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/w20"
                android:paddingRight="@dimen/w20"
                android:layout_marginTop="@dimen/h5">
                <EditText
                    android:id="@+id/activity_reset_password_et2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.5"
                    android:hint="@string/captcha"
                    android:textSize="@dimen/h10"
                    android:maxLength="6"
                    android:maxLines="1"
                    android:inputType="number"
                    android:paddingLeft="@dimen/w10"
                    android:paddingTop="@dimen/h10"
                    android:paddingBottom="@dimen/h8"
                    android:background="@drawable/et_focus_state_contact"></EditText>

                <Button
                    android:id="@+id/activity_reset_password_btn1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/send"
                    android:textSize="@dimen/h13"
                    android:textColor="@color/btn_sign_out_color"
                    android:maxLines="1"
                    android:maxLength="6"
                    android:background="@drawable/btn_press_state"
                    android:layout_marginLeft="@dimen/w8"></Button>
            </LinearLayout>

            <EditText
                android:id="@+id/activity_reset_password_etu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:textSize="@dimen/h12"
                android:maxLength="30"
                android:maxLines="1"
                android:inputType="text"
                android:paddingLeft="@dimen/w10"
                android:paddingTop="@dimen/h10"
                android:paddingBottom="@dimen/h8"
                android:layout_marginTop="@dimen/h5"
                android:layout_marginLeft="@dimen/w20"
                android:layout_marginRight="@dimen/w20"
                android:background="@drawable/et_focus_state_contact"
                ></EditText>
            <EditText
                android:id="@+id/activity_reset_password_etpwd1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textSize="@dimen/h12"
                android:maxLength="30"
                android:maxLines="1"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/w10"
                android:paddingTop="@dimen/h10"
                android:paddingBottom="@dimen/h8"
                android:layout_marginTop="@dimen/h5"
                android:layout_marginLeft="@dimen/w20"
                android:layout_marginRight="@dimen/w20"
                android:background="@drawable/et_focus_state_contact"
                ></EditText>
            <EditText
                android:id="@+id/activity_reset_password_etpwd2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:textSize="@dimen/h12"
                android:maxLength="30"
                android:maxLines="1"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/w10"
                android:paddingTop="@dimen/h10"
                android:paddingBottom="@dimen/h8"
                android:layout_marginTop="@dimen/h5"
                android:layout_marginLeft="@dimen/w20"
                android:layout_marginRight="@dimen/w20"
                android:background="@drawable/et_focus_state_contact"
                ></EditText>

            <Spinner
                android:id="@+id/activity_reset_password_sp1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/h10"
                android:paddingBottom="@dimen/h10"
                android:layout_marginLeft="@dimen/w20"
                android:layout_marginRight="@dimen/w20"
                android:layout_marginTop="@dimen/h10"></Spinner>
            <EditText
                android:id="@+id/activity_reset_password_et3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/security_answer"
                android:textSize="@dimen/h12"
                android:inputType="text"
                android:maxLines="1"
                android:maxLength="30"
                android:paddingTop="@dimen/h8"
                android:paddingBottom="@dimen/h8"
                android:paddingLeft="@dimen/w10"
                android:layout_marginLeft="@dimen/w20"
                android:layout_marginRight="@dimen/w20"
                android:layout_marginTop="@dimen/h10"
                android:background="@drawable/et_focus_state_contact"
                ></EditText>

            <Spinner
                android:id="@+id/activity_reset_password_sp2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/h10"
                android:paddingBottom="@dimen/h10"
                android:layout_marginLeft="@dimen/w20"
                android:layout_marginRight="@dimen/w20"
                android:layout_marginTop="@dimen/h10"></Spinner>
            <EditText
                android:id="@+id/activity_reset_password_et4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/security_answer"
                android:textSize="@dimen/h12"
                android:inputType="text"
                android:maxLines="1"
                android:maxLength="30"
                android:paddingTop="@dimen/h8"
                android:paddingBottom="@dimen/h8"
                android:paddingLeft="@dimen/w10"
                android:layout_marginLeft="@dimen/w20"
                android:layout_marginRight="@dimen/w20"
                android:layout_marginTop="@dimen/h10"
                android:background="@drawable/et_focus_state_contact"
                ></EditText>

            <Spinner
                android:id="@+id/activity_reset_password_sp3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/h10"
                android:paddingBottom="@dimen/h10"
                android:layout_marginLeft="@dimen/w20"
                android:layout_marginRight="@dimen/w20"
                android:layout_marginTop="@dimen/h10"></Spinner>
            <EditText
                android:id="@+id/activity_reset_password_et5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/security_answer"
                android:textSize="@dimen/h12"
                android:inputType="text"
                android:maxLines="1"
                android:maxLength="30"
                android:paddingTop="@dimen/h8"
                android:paddingBottom="@dimen/h8"
                android:paddingLeft="@dimen/w10"
                android:layout_marginLeft="@dimen/w20"
                android:layout_marginRight="@dimen/w20"
                android:layout_marginTop="@dimen/h10"
                android:background="@drawable/et_focus_state_contact"
                ></EditText>

            <Button
                android:id="@+id/activity_reset_password_btn2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reset"
                android:textColor="@color/btn_sign_out_color"
                android:paddingTop="@dimen/h10"
                android:paddingBottom="@dimen/h10"
                android:layout_marginTop="@dimen/h20"
                android:layout_marginLeft="@dimen/w20"
                android:layout_marginRight="@dimen/w20"
                android:background="@drawable/btn_press_state"
                ></Button>

        </LinearLayout>

    </ScrollView>

</LinearLayout>