<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fff"
    tools:context="com.example.administrator.easycure.activities.MainActivity">

   <LinearLayout
       android:id="@+id/activity_main_ll1"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:paddingTop="@dimen/h35"
       android:layout_marginLeft="@dimen/w20"
       android:layout_marginTop="@dimen/h20"
       android:orientation="vertical"
       >
       <ImageView
           android:layout_width="@dimen/w60"
           android:layout_height="@dimen/h50"
           android:background="@mipmap/icon_main_cross"
           ></ImageView>
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/main_title"
           android:textSize="@dimen/h25"
           android:layout_marginTop="@dimen/h3"
           ></TextView>
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/main_message"
           android:textSize="@dimen/h12"
           android:textColor="@color/colorGray"
           android:layout_marginTop="@dimen/h12"
           android:layout_marginBottom="@dimen/h5"
           ></TextView>
       <Button
           android:id="@+id/activity_main_btn_call"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/call_us"
           android:textColor="#fff"
           android:textSize="@dimen/h12"
           android:layout_marginTop="@dimen/h10"
           android:paddingLeft="@dimen/w15"
           android:paddingRight="@dimen/w15"
           android:background="@drawable/btn_radius_press_state"
           ></Button>
   </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/h120"
            android:background="@drawable/activity_main_map"
            ></ImageView>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/activity_main_rl1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/h10"
        android:layout_below="@id/activity_main_ll1"
        >
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/w25"
            >
            <RelativeLayout
                android:id="@+id/activity_main_shop"
                android:layout_width="@dimen/w80"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/h10"
                android:layout_marginRight="@dimen/w15"
                android:background="@drawable/card_press_state"
                >
                <ImageView
                    android:id="@+id/activity_main_iv1"
                    android:layout_width="@dimen/w40"
                    android:layout_height="@dimen/h32"
                    android:background="@mipmap/icon_main_shop"
                    android:layout_centerHorizontal="true"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/check_our_shop"
                    android:textSize="@dimen/h12"
                    android:textColor="@color/card_main_color"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/h3"
                    android:layout_marginBottom="@dimen/h5"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/activity_main_iv1"
                    ></TextView>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/activity_main_rl_health_information"
                android:layout_width="@dimen/w80"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/h10"
                android:layout_marginRight="@dimen/w15"
                android:layout_toRightOf="@id/activity_main_shop"
                android:background="@drawable/card_press_state"
                >
                <ImageView
                    android:id="@+id/activity_main_iv2"
                    android:layout_width="@dimen/w40"
                    android:layout_height="@dimen/h32"
                    android:background="@mipmap/icon_main_dcotor"
                    android:layout_centerHorizontal="true"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/health_information"
                    android:textSize="@dimen/h12"
                    android:textColor="@color/card_main_color"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/h3"
                    android:layout_marginBottom="@dimen/h5"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/activity_main_iv2"
                    ></TextView>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/activity_main_rl_more"
                android:layout_width="@dimen/w80"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/h10"
                android:layout_marginRight="@dimen/w15"
                android:layout_toRightOf="@id/activity_main_rl_health_information"
                android:background="@drawable/card_press_state"
                >
                <ImageView
                    android:id="@+id/activity_main_iv3"
                    android:layout_width="@dimen/w40"
                    android:layout_height="@dimen/h32"
                    android:background="@mipmap/icon_main_heart"
                    android:layout_centerHorizontal="true"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/something_you_want"
                    android:textSize="@dimen/h12"
                    android:textColor="@color/card_main_color"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/h3"
                    android:layout_marginBottom="@dimen/h5"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/activity_main_iv3"
                    ></TextView>
            </RelativeLayout>

        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>
