<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">

    <RelativeLayout
        android:id="@+id/fragment_schedule_rl1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/h15"
        android:layout_marginLeft="@dimen/w10"
        android:layout_marginRight="@dimen/w15">
        <ImageView
            android:id="@+id/fragment_schedule_iv"
            android:layout_width="@dimen/w25"
            android:layout_height="@dimen/h18"
            android:layout_centerVertical="true"
            android:background="@mipmap/icon_drawer"></ImageView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/schedule"
            android:textStyle="bold"
            android:textSize="@dimen/h16"
            android:layout_centerInParent="true"></TextView>
        <ImageView
            android:id="@+id/fragment_schedule_iv2"
            android:layout_width="@dimen/w25"
            android:layout_height="@dimen/h18"
            android:layout_centerVertical="true"
            android:background="@mipmap/icon_add_contact_item"
            android:layout_alignParentRight="true"></ImageView>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/fragment_schedule_rl2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/h20"
        android:layout_marginLeft="@dimen/w20"
        android:layout_below="@id/fragment_schedule_rl1">
        <TextView
            android:id="@+id/fragment_schedule_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plan"
            android:textSize="@dimen/h18"
            android:textStyle="bold"
            android:textColor="#034fce"></TextView>

        <View
            android:layout_width="@dimen/w30"
            android:layout_height="@dimen/h3"
            android:background="#034fce"
            android:layout_marginTop="@dimen/h10"
            android:layout_below="@id/fragment_schedule_tv"
            android:layout_centerHorizontal="true"></View>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/h13"
        android:background="#EFFBFB"></View>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/fragment_schedule_tv1"
            android:layout_width="wrap_content"
            android:layout_height='wrap_content'
            android:text="@string/nothing_to_show"
            android:textSize="@dimen/h18"
            android:textColor="#bdbdbd"
            android:layout_centerInParent="true"
            ></TextView>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/fragment_schedule_rlv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"></android.support.v7.widget.RecyclerView>
    </RelativeLayout>


</LinearLayout>